Fixed event listing overflow cutoff

--- a/src/assets/scss/components/navbar/_login.scss
+++ b/src/assets/scss/components/navbar/_login.scss
@@ -157,7 +157,7 @@ app-navbar {
 	}
 }
 
-@media (min-width: 811px) {
+@media (min-width: 821px) {
 	app-navbar {
 		.navbar {	
 			&__login {
