--- a/src/assets/scss/views/home/_selector.scss
+++ b/src/assets/scss/views/home/_selector.scss
@@ -66,7 +66,7 @@
 				background-color: $foreground-bright;
 				border-radius: 12px;
 				padding: 2vh;
-				width: 95%;
+				width: 80%;
 
 				-webkit-box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.1);
 				-moz-box-shadow: 	4px 4px 4px 0px rgba(0,0,0,0.1);
@@ -174,6 +174,19 @@
 			.mdc-tab-indicator {
 				display: none !important;
 			}
+		}
+	}
+}
+
+@media (min-width: 821px) {
+	.event {
+		&__selector {
+			&__list {
+				li {
+					width: 95%;
+				}
+			}
+	
 		}
 	}
 }
